Get rid of hero stuff

--- a/src/theme/theme.yaml
+++ b/src/theme/theme.yaml
@@ -72,7 +72,7 @@ font:
     standard: 400
     bold: 600
   size:
-    xxs: &font-size-xs .8em
+    xxs: &font-size-xxs .8em
     xs: &font-size-xs .95em
     s: &font-size-s 1.1em
     m: &font-size-m 1.35em
